fixed spacing issues and text size

--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,12 @@ html, body {
 .subtitle {
   margin-top: 15px;
   margin-bottom: 15px;
+  font-size: 28pt;
+}
+
+h3 {
+  margin-bottom: 15px;
+  font-size:21pt;
 }
 
 #webpage-details, #disclaimer-1, #disclaimer-2 {
@@ -190,14 +196,18 @@ html, body {
 
   .description {
     margin-bottom: 15px;
+    font-size: 14pt;
   }
 
   #kickout {
     display: flex;
     align-items: center;
     gap: 8px;
+    margin: 0 auto;
+    width: fit-content;
+    font-size: 20pt;
   }
 
   #kickout i {
-    font-size: 25px;
+    font-size: 30px;
   }
